Fixed overflow on info page

--- a/src/main/resources/static/css/info.css
+++ b/src/main/resources/static/css/info.css
@@ -1,5 +1,6 @@
-.navbar
+body
 {
+    overflow-y: hidden;
 }
 
 .infopage
